samples/_failures_safe/1761529068_2e390f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3bc6067e.c: In function ‘main’:
./samples/SAFE/__tmp_3bc6067e.c:175:5: error: expected declaration or statement at end of input
  175 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_3bc6067e.c:175:5: error: expected declaration or statement at end of input
